; ModuleID = '/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvgTransformRotate.c'
source_filename = "/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvgTransformRotate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nvgTransformRotate(float* %0, float %1) #0 {
  %3 = alloca float*, align 8
  %4 = alloca float, align 4
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  store float* %0, float** %3, align 8
  store float %1, float* %4, align 4
  %7 = load float, float* %4, align 4
  %8 = call float @nvg__cosf(float %7)
  store float %8, float* %5, align 4
  %9 = load float, float* %4, align 4
  %10 = call float @nvg__sinf(float %9)
  store float %10, float* %6, align 4
  %11 = load float, float* %5, align 4
  %12 = load float*, float** %3, align 8
  %13 = getelementptr inbounds float, float* %12, i64 0
  store float %11, float* %13, align 4
  %14 = load float, float* %6, align 4
  %15 = load float*, float** %3, align 8
  %16 = getelementptr inbounds float, float* %15, i64 1
  store float %14, float* %16, align 4
  %17 = load float, float* %6, align 4
  %18 = fneg float %17
  %19 = load float*, float** %3, align 8
  %20 = getelementptr inbounds float, float* %19, i64 2
  store float %18, float* %20, align 4
  %21 = load float, float* %5, align 4
  %22 = load float*, float** %3, align 8
  %23 = getelementptr inbounds float, float* %22, i64 3
  store float %21, float* %23, align 4
  %24 = load float*, float** %3, align 8
  %25 = getelementptr inbounds float, float* %24, i64 4
  store float 0.000000e+00, float* %25, align 4
  %26 = load float*, float** %3, align 8
  %27 = getelementptr inbounds float, float* %26, i64 5
  store float 0.000000e+00, float* %27, align 4
  ret void
}

declare dso_local float @nvg__cosf(float) #1

declare dso_local float @nvg__sinf(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
